hard-gists/795180/run.log
=== Docker Run Log for 795180 ===
Started at: Mi 29. Okt 17:22:55 CET 2025

[2025-10-29 17:22:55] START: Running container for 795180
[2025-10-29 17:22:56] SUCCESS: Container 347c8f3ba1925de282ed0e2e54e54eda0d5392821cd9eefcdfd931056609a085 started for 795180
=== Container logs for 795180 ===
  File "/snippet.py", line 22
    print title, link, desc
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 795180 ===
[2025-10-29 17:22:58] INFO: Container 347c8f3ba1925de282ed0e2e54e54eda0d5392821cd9eefcdfd931056609a085 has stopped
